views_examples: add Button sticker sheet

This "example" displays a sticker sheet of all the available button styles,
designed to be as close as possible in appearance to the Harmony spec document's
sticker sheet.

BUG=642790

Review-Url: https://codereview.chromium.org/2296343004
Cr-Commit-Position: refs/heads/master@{#416280}

Former-commit-id: 82afa6f4d9cb67ca9da0b8f32fe5dcf82c6f2bc8